# ds-template

./: .editorconfig  .env-example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
scripts/: init_project.py
src/ds_template/: config.py
tests/: test_config.py
