[project]
name = "ds-template"
version = "0.1.0"
description = "A reusable data science project template."
authors = [{ name = "Seu nome", email = "seu@email.com" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_template"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = [
    "data",
    "models",
    "reports",
    ".venv",
    ".env",
    "__pycache__"
]

[tool.ruff.lint]
select = [
    "F", "UP", "B", "SIM", "S", "T20", # Previous rules
    "ANN", # flake8-annotations
    "C4",  # flake8-comprehensions
    "BLE", # flake8-blind-except
    "PIE", # flake8-pie
    "I",
    "N",
    "G",
    "RET",
    "NPY",
    "W",
    "E",
    "ISC",
    "ICN",
    "TID",
    "PTH",
    "COM",
    "FBT",
    "LOG",
    "RUF",
    "Q",
    "ARG",
    "PD"
]
ignore = [
  "E501", # Line length handled by formatter where possible
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "TD", "FIX", "ERA",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert if S is added later
    "ARG",     # Test fixtures can look unused
    "PLR2004", # Allow magic values if PLR is added later
]
"notebooks/*.ipynb" = [
    "ANN",
    "E402", # Allow imports after exploratory cells
    "T201", # Allow print statements in notebooks
    "ARG",
]

[tool.ruff.lint.isort]
known-first-party = ["ds_template"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.14"
root = ["./src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
